# fortinbras

./: .gitignore  Cargo.toml  README.md  build-fortinbras.sh
config/: log.yaml  settings.toml
fortinbras-ui/: package.json  webpack.config.js
fortinbras-ui/src/: Main.elm  Messages.elm  Models.elm  Routing.elm  Update.elm  View.elm  index.html  index.js  style.scss
fortinbras-ui/src/Items/: Commands.elm  Delete.elm  Messages.elm  Models.elm  Read.elm  Update.elm  Write.elm
fortinbras-ui/src/Nav/: Messages.elm  Models.elm  Update.elm  View.elm
src/: lib.rs  main.rs  serde_types.in.rs
src/config/: config.rs
src/model/: item.rs
src/server/: server.rs  ui.rs
src/storage/: client.rs  commit_log.rs  in_memory.rs  mod.rs
tests/: server.rs
